--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <video autoplay loop muted plays-inline class="back-video"> 
         <source src="num1.mp4" type="video/mp4"> 
     </video>
